--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <!-- BUTTONS -->
   <div class="button-container">
     <a href="https://youtu.be/dQw4w9WgXcQ?si=rCa8JCRyfQB1tUma" class="btn" target="_black">IDLE</a>
+    <a href="https://www.facebook.com/?locale=vi_VN" class="btn" target="_black">test</a>
   </div>
 
   <!-- QR OVERLAY -->
